--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: jawsug_sonic_midnight_jaws
+service: jawsug-sonic-midnight-jaws
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
@@ -23,6 +23,7 @@ service: jawsug_sonic_midnight_jaws
 provider:
   name: aws
   runtime: python3.8
+  profile: jaws_ug
 
 # you can overwrite defaults here
 #  stage: dev
@@ -111,3 +112,10 @@ functions:
 #     NewOutput:
 #       Description: "Description for the output"
 #       Value: "Some output value"
+
+plugins:
+  - serverless-python-requirements
+
+custom:
+  pythonRequirements:
+    dockerizePip: true
